# go-rust-channel-benchmark

go/: go.mod
rust/: Cargo.toml
rust/src/: main.rs
